--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1>Nueva rama?</h1>
 
     <p>Texto de la rama Texto</p>
+
+    <a href="http://sueñalucido.com">Ir a pagina web</a>
     
 </body>
 </html>
